fix: Add back extra space to right (#17)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 5px 15px 15px;
+  padding: 5px 23px 15px 15px;
 }
 
 .dark {
